--- a/hospital/templates/medicine_display.html
+++ b/hospital/templates/medicine_display.html
@@ -1,32 +1,101 @@
-{% extends "layout.html" %}
-{% block content %}
-  <article class="media content-section">
-    <img class="rounded float-left article-img" src="{{ url_for('static', filename='images/meds/' + med.image_file) }}">
-    <div class="media-body">
-      <div class="article-metadata">
-        <h3 class="mr-2" >Medicine name: {{ med.name }}</h3>
-      </div>
-      <h4 class="article-title mr-2">Manufactured_by: </h4><p>{{ med.manufactured_by }}</p>
-      {% if med.price %}
-      <h4 class="article-title mr-2">Price: </h4><p>{{ med.price }}</p>
-      {% else %}
-      <h4 class="article-title mr-2">Price: </h4><p>Cost of med varies </p>
-      {% endif %}
-      <h4 class="article-title mr-2">Description: </h4></br>
-      <p class="article-content mr-2">{{ med.description }}</p>
-      <h4 class="article-title mr-2">Uses: </h4></br>
-      <p class="article-content mr-2">{{ med.uses }}</p>
-      <h4 class="article-title">Side effects: </h4></br>
-      {% if med.side_effects %}
-      <p class="article-content">{{ med.side_effects }}</p>
-      {% else %}
-      <p class="article-content">No Side effects</p>
-      {% endif %}
-      {% if sub %}
-      <h4 class="article-title mr-2">Substitute medicine: </h4><a class="" href="{{ url_for('medicine_display', medicine_id=sub.id) }}">{{ sub.name }}</p>
-      {% else %}
-      <h5 class="article-title mr-2">We are sorry to say that this medicine does not have any substitute. Please contact your doctor for further information</h5>
-      {% endif %}
-    </div>
-  </article>
-{% endblock content %}
+<!DOCTYPE html>
+<html>
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Site Icons -->
+   <link rel="shortcut icon" href="static/images/fevicon.ico.png" type="image/x-icon" />
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+    
+    {% if title %}
+        <title>Hospital - {{ title }}</title>
+    {% else %}
+        <title>Hospital</title>
+    {% endif %}
+</head>
+<body>
+    <header class="site-header">
+      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+        <div class="container">
+          <a class="navbar-brand mr-4" href="/">Hospital</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarToggle">
+            <div class="navbar-nav mr-auto">
+              <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
+              <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
+            </div>
+            <!-- Navbar Right Side -->
+            <div class="navbar-nav">
+              {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
+                <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+              {% else %}
+                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+              {% endif %}
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main role="main" class="container">
+      <div class="row">
+        <div class="col-md-8">
+          {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+              {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                  {{ message }}
+                </div>
+              {% endfor %}
+            {% endif %}
+          {% endwith %}
+            <article class="media content-section">
+                <img class="rounded float-left article-img" src="{{ url_for('static', filename='images/meds/' + med.image_file) }}">
+                <div class="media-body">
+                <div class="article-metadata">
+                    <h3 class="mr-2" >Medicine name: {{ med.name }}</h3>
+                </div>
+                <h4 class="article-title mr-2">Manufactured_by: </h4><p>{{ med.manufactured_by }}</p>
+                {% if med.price %}
+                <h4 class="article-title mr-2">Price: </h4><p>{{ med.price }}</p>
+                {% else %}
+                <h4 class="article-title mr-2">Price: </h4><p>Cost of med varies </p>
+                {% endif %}
+                <h4 class="article-title mr-2">Description: </h4></br>
+                <p class="article-content mr-2">{{ med.description }}</p>
+                <h4 class="article-title mr-2">Uses: </h4></br>
+                <p class="article-content mr-2">{{ med.uses }}</p>
+                <h4 class="article-title">Side effects: </h4></br>
+                {% if med.side_effects %}
+                <p class="article-content">{{ med.side_effects }}</p>
+                {% else %}
+                <p class="article-content">No Side effects</p>
+                {% endif %}
+                {% if sub %}
+                <h4 class="article-title mr-2">Substitute medicine: </h4><a class="" href="{{ url_for('medicine_display', medicine_id=sub.id) }}">{{ sub.name }}</p>
+                {% else %}
+                <h5 class="article-title mr-2">We are sorry to say that this medicine does not have any substitute. Please contact your doctor for further information</h5>
+                {% endif %}
+                </div>
+            </article>
+           </div>
+        </div>
+    </main>
+
+
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    </body>
+</html>
