--- a/hospital/templates/medicines.html
+++ b/hospital/templates/medicines.html
@@ -28,26 +28,27 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
-            <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="{{ url_for('medicines', disease_type='cough and cold') }}">Cough and Cold</a>
-              <a class="nav-item nav-link" href="{{ url_for('medicines', disease_type='diabetes') }}">Diabetes</a>
-              <a class="nav-item nav-link" href="{{ url_for('medicines', disease_type='diarrhoea') }}">Diarrhoea</a>
-              <a class="nav-item nav-link" href="{{ url_for('medicines', disease_type='headache') }}">Headache</a>
-              <a class="nav-item nav-link" href="{{ url_for('medicines', disease_type='body pain') }}">Body pain</a>
-              <a class="nav-item nav-link" href="{{ url_for('medicines', disease_type='stomach ache') }}">Stomach ache</a>
-              <a class="nav-item nav-link" href="{{ url_for('medicines', disease_type='tooth ache') }}">Tooth ache</a>
-              <a class="nav-item nav-link" href="{{ url_for('medicines', disease_type='eye drops') }}">Eye drops</a>
-              <a class="nav-item nav-link" href="{{ url_for('medicines', disease_type='ear drops') }}">Ear drops</a>
+            <div class="navbar-nav mr-auto" style="font-size: 18px;list-style-type: none; margin:0; padding: 0; overflow: hidden; background-color:#2895f1;">
+              <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('medicines', disease_type='cough and cold') }}">Cough and Cold</a>
+              <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('medicines', disease_type='diabetes') }}">Diabetes</a>
+              <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('medicines', disease_type='diarrhoea') }}">Diarrhoea</a>
+              <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('medicines', disease_type='headache') }}">Headache</a>
+              <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('medicines', disease_type='body pain') }}">Body pain</a>
+              <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('medicines', disease_type='stomach ache') }}">Stomach ache</a>
+              <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('medicines', disease_type='tooth ache') }}">Tooth ache</a>
+              <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('medicines', disease_type='eye drops') }}">Eye drops</a>
+              <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('medicines', disease_type='ear drops') }}">Ear drops</a>
 
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if current_user.is_authenticated %}
-                <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
-                <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+              <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('view_cart') }}">View Cart</a>
+                <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('account') }}">Account</a>
+                <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('logout') }}">Logout</a>
               {% else %}
-                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+                <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('login') }}">Login</a>
+                <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('register') }}">Register</a>
               {% endif %}
             </div>
           </div>
@@ -73,7 +74,7 @@
                 <h1 style="text-align: center;">{{ disease_type }}</h1><br><hr><br>
             </div>
             </div>
-            {% for medicine in medicines %}
+            {% for medicine in medicines.items %}
             <div class="row">
                 <div class="col-md-3">
                     <div class="card">
@@ -82,10 +83,29 @@
                             <a href="{{ url_for('medicine_display', medicine_id=medicine.id) }}" class="card-text" style="text-align: center;"><b>{{ medicine.name }}</b></a>
                             <p> {{ medicine.id }}
                             <br>Price: {{ medicine.price }} </br></p>
+                            <div class="button center"><a style='display: inline-block;
+                                background: #21759b;
+                                border-radius: 4px;
+                                font-family: "arial-black";
+                                font-size: 16px;
+                                color: #FFF;
+                                padding: 6px 10px;
+                                cursor: pointer; ' href="{{ url_for('add_to_cart', medicine_id=medicine.id) }}">Add to cart</a></div>
                         </div>
                     </div>    
                 </div>
             </div>
+            {% endfor %}
+            {% for page_num in medicines.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+            {% if page_num %}
+                {% if medicines.page == page_num %}
+                <a class="btn btn-info mb-4" href="{{ url_for('medicines', disease_type=disease_type, page=page_num) }}">{{ page_num }}</a>
+                {% else %}
+                <a class="btn btn-outline-info mb-4" href="{{ url_for('medicines', disease_type=disease_type, page=page_num) }}">{{ page_num }}</a>
+                {% endif %}
+            {% else %}
+                ...
+            {% endif %}
             {% endfor %}
           {% else %}
           <h3>There's Nothing to see here </h3>
