--- a/hospital/templates/add_medicine.html
+++ b/hospital/templates/add_medicine.html
@@ -71,6 +71,19 @@
                     {% endif %}
                 </div>
                 <div class="form-group">
+                    {{ form.stock.label(class="form-control-label") }}
+                    {% if form.stock.errors %}
+                        {{ form.stock(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.stock.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.stock(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group">
                     {{ form.description.label(class="form-control-label") }}
                     {% if form.description.errors %}
                         {{ form.description(class="form-control form-control-lg is-invalid") }}
