--- a/hospital/templates/medicines.html
+++ b/hospital/templates/medicines.html
@@ -47,6 +47,26 @@
           text-decoration: none;
           display: block;
         }
+        .alert {
+            padding: 20px;
+            background-color:  #cc6699;
+            color: white;
+          }
+
+        .closebtn {
+          margin-left: 15px;
+          color: white;
+          font-weight: bold;
+          float: right;
+          font-size: 22px;
+          line-height: 20px;
+          cursor: pointer;
+          transition: 0.3s;
+        }
+
+        .closebtn:hover {
+          color: black;
+        }
         
         .dropdown-content a:hover {background-color: #ddd;}
         
@@ -123,6 +143,13 @@
                             <a href="{{ url_for('medicine_display', medicine_id=medicine.id) }}" class="card-text" style="text-align: center;"><b>{{ medicine.name }}</b></a>
                             <p> {{ medicine.id }}
                             <br>Price: {{ medicine.price }} </br></p>
+                            </br>
+                            {% if medicine.stock <= 20 %}
+                            <div class="alert">
+                              <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+                              <strong>Hurry!</strong> only {{ medicine.stock }} left!
+                            </div>
+                            {% endif %}
                             <div class="button center"><a style='display: inline-block;
                                 background: #21759b;
                                 border-radius: 4px;
